[package]
name = "dali"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Austin Jones <austinbaysjones@gmail.com>"]
description = "A rendering library for fast digital painting"
keywords = ["rendering", "graphics", "generative", "art", "dali"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/austinjones/dali-rs"
repository = "https://github.com/austinjones/dali-rs"
readme = "README.md"
edition = "2018"

exclude = [
    "examples/*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
luminance = "0.37.1"
luminance-derive = "0.5"
luminance-glfw = "0.11"
image = "0.22.1"

[dev-dependencies]
rand = "0.7.0"
rand_xorshift = "0.2.0"
imageproc = "0.19.2"

[[test]]
name = "gltests"
path = "gltests/main.rs"
harness = false