[package]
name = "dali"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Austin Jones <austinbaysjones@gmail.com>"]
description = "A rendering library for fast digital painting"
keywords = ["rendering", "graphics", "generative", "art", "dali"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/austinjones/dali-rs"
repository = "https://github.com/austinjones/dali-rs"
readme = "README.md"
edition = "2018"

exclude = [
    "examples/*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
glfw = "0.43"
image = "0.23"
luminance = "0.46"
luminance-derive = "0.9"
luminance-gl = "0.19"
luminance-glfw = "0.18"

[dev-dependencies]
rand = "0.7.0"
rand_xorshift = "0.2.0"
imageproc = "0.19.2"

[[test]]
name = "gltests"
path = "gltests/main.rs"
harness = false
